bad/add_invalid_types_array_class.example_compiler_output
ERROR
[1mbad/add_invalid_types_array_class.lat:6:13: [1;31merror: [0;1maddition is defined only for int values or string values, not `int[]` and `X`[m
	new int[3] + x;
	           [1;32m^[m
